# fast-tags

./: .gitignore  .travis.yml  LICENSE  README  README.md  TODO  boring  changelog.md  fast-tags.cabal  init-tags  post-checkout  qualified_tag.py  vimrc
.github/workflows/: ci.yml
src/: FastTags.hs  Lexer.x  LexerTypes.hs  Main.hs  Main_test.hs  Paths_fast_tags.hs  Tag.hs  Token.hs
src-8.10/: Compat.hs
src-9.2/: Compat.hs
src/Control/Monad/: EitherK.hs
src/FastTags/: Cabal.hs  Emacs.hs  LensBlaze.hs  Lexer.hs  Lexer.x  LexerM.hs  LexerTypes.hs  Main.hs  Tag.hs  Token.hs  Util.hs  Vim.hs
test/: Class1.hs  verify
tests/: MainTest.hs
tools/: README.md  init-tags  post-checkout  post-merge  qualified_tag.py
